--- a/GitBisectGUI/GitBisectGUI.csproj
+++ b/GitBisectGUI/GitBisectGUI.csproj
@@ -54,11 +54,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BisectStep.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainUI.Designer.cs">
+      <DependentUpon>MainUI.cs</DependentUpon>
     </Compile>
     <Compile Include="GBS.cs">
       <SubType>Form</SubType>
@@ -68,8 +68,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainUI.resx">
+      <DependentUpon>MainUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GBS.resx">
       <DependentUpon>GBS.cs</DependentUpon>
